--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <image src="./assets/images/movie-ranking.png/"height=200; alt="project screenshot"/>
+    <image src="../assets/images/movie-ranking.png/"height=200; alt="project screenshot"/>
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <image src="./assets/images/birthday-invite.png/"height=200; alt="project screenshot 2"/>
+    <image src="../assets/images/birthday-invite.png/"height=200; alt="project screenshot 2"/>
     <hr/>
     <h3><a href="./public/about.html">About Me</a>  <a href="./public/contact.html">Contact Me</a></h3>
 </body>
